--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
 #absentMemberListSection { text-align: left; margin-top: 20px; padding: 10px; border: 1px solid #ddd; border-radius: 5px; }
 #absentMemberList { list-style-type: none; padding-left: 0; }
 #absentMemberList li { margin-bottom: 5px; }
-.instrument-label { display: inline-block; width: 60px; text-align: right; margin-right: 10px; } /* 楽器名ラベル用 */
+.instrument-label { display: none; } /* 楽器名ラベルを非表示に */
+.input-group { display: block; } /* input-groupをブロック要素として表示 */
 </style>
 </head>
 <body>
@@ -69,10 +70,6 @@ button { padding: 10px 20px; font-size: 16px; cursor: pointer; }
         <input type="password" id="adminPassword" placeholder="管理者パスワード">
         <button onclick="checkAdminPassword()">認証</button>
         <div id="addMemberForm" style="display: none;">
-            <div class="input-group">
-                <label for="newMemberInstrument" class="instrument-label">楽器:</label>
-                <input type="text" id="newMemberInstrument" placeholder="楽器名">
-            </div>
             <div class="input-group">
                 <label for="newMemberName" class="instrument-label">名前:</label>
                 <input type="text" id="newMemberName" placeholder="新しいメンバー名">
@@ -124,12 +121,12 @@ function initializeAttendancePage() {
     loadMembers();
     loadAttendance();
     renderAttendanceTable();
-    updateInstrumentDisplay(); // 楽器名表示を更新
+    updateInstrumentDisplay();
 }
 
 function updateInstrumentDisplay() {
     const instrumentDisplaySpan = document.getElementById('selectedInstrumentDisplay');
-    instrumentDisplaySpan.textContent = `(${selectedInstrument})`; // 選択された楽器名を表示
+    instrumentDisplaySpan.textContent = `(${selectedInstrument})`;
 }
 
 
@@ -198,7 +195,7 @@ function loadMembers() {
     if (storedMembers) {
         members = JSON.parse(storedMembers);
     } else {
-        members = [  // 初期メンバーリストを更新 - 楽器情報を含む
+        members = [  // 初期メンバーリストを更新 - 楽器情報 **あり** (ここは変更しない)
             { name: "メンバー1", instrument: "フルート" },
             { name: "メンバー2", instrument: "フルート" },
             { name: "メンバー3", instrument: "チューバ" },
@@ -223,17 +220,12 @@ function loadMemberList() {
         const listItem = document.createElement('li');
         listItem.classList.add('member-item');
 
-        // 楽器名表示・編集
+        // 楽器名表示 (ここは維持)
         let memberInstrumentSpan = document.createElement('span');
         memberInstrumentSpan.textContent = `楽器: ${member.instrument}`; // 楽器名を表示
-        let editInstrumentInput = document.createElement('input');
-        editInstrumentInput.type = 'text';
-        editInstrumentInput.value = member.instrument;
-        editInstrumentInput.className = 'edit-input';
-        editInstrumentInput.style.display = 'none';
 
 
-        // メンバー名表示・編集 (既存部分)
+        // メンバー名表示・編集 (既存部分 - 楽器名編集部分を削除)
         let memberNameSpan = document.createElement('span');
         memberNameSpan.textContent = `名前: ${member.name}`; // 名前を表示
         let editInput = document.createElement('input');
@@ -248,45 +240,23 @@ function loadMemberList() {
         editButton.onclick = function() {
             memberNameSpan.style.display = 'none';
             editInput.style.display = 'inline-block';
-            memberInstrumentSpan.style.display = 'none'; // 楽器名も非表示
-            editInstrumentInput.style.display = 'inline-block'; // 楽器編集フィールドを表示
-
+            memberInstrumentSpan.style.display = 'inline-block'; // 楽器名は表示したまま
             editInput.focus();
         };
 
         editInput.addEventListener('blur', function() {
-            saveEdit(index, editInput.value, editInstrumentInput.value); // saveEditに楽器名も渡す
+            saveEdit(index, editInput.value); // saveEditから楽器名引数を削除
             memberNameSpan.style.display = 'inline-block';
             editInput.style.display = 'none';
             memberInstrumentSpan.style.display = 'inline-block'; // 楽器名再表示
-            editInstrumentInput.style.display = 'none'; // 楽器編集フィールド非表示
         });
 
         editInput.addEventListener('keydown', function(event) {
             if (event.key === 'Enter') {
-                saveEdit(index, editInput.value,  editInstrumentInput.value); // saveEditに楽器名も渡す
+                saveEdit(index, editInput.value); // saveEditから楽器名引数を削除
                 memberNameSpan.style.display = 'inline-block';
                 editInput.style.display = 'none';
                 memberInstrumentSpan.style.display = 'inline-block'; // 楽器名再表示
-                editInstrumentInput.style.display = 'none'; // 楽器編集フィールド非表示
-            }
-        });
-
-        editInstrumentInput.addEventListener('blur', function() { // 楽器編集フィールドのblurイベント
-             saveEdit(index, editInput.value, editInstrumentInput.value); // saveEditに楽器名も渡す
-            memberInstrumentSpan.style.display = 'inline-block';
-            editInstrumentInput.style.display = 'none';
-            memberNameSpan.style.display = 'inline-block'; // メンバー名再表示
-            editInput.style.display = 'none'; // メンバー名編集フィールド非表示
-        });
-
-        editInstrumentInput.addEventListener('keydown', function(event) { // 楽器編集フィールドのkeydownイベント
-            if (event.key === 'Enter') {
-                 saveEdit(index, editInput.value,  editInstrumentInput.value); // saveEditに楽器名も渡す
-                memberInstrumentSpan.style.display = 'inline-block';
-                editInstrumentInput.style.display = 'none';
-                memberNameSpan.style.display = 'inline-block'; // メンバー名再表示
-                editInput.style.display = 'none'; // メンバー名編集フィールド非表示
             }
         });
 
@@ -297,26 +267,25 @@ function loadMemberList() {
 
         listItem.appendChild(memberNameSpan);
         listItem.appendChild(editInput);
-        listItem.appendChild(memberInstrumentSpan); // 楽器名表示
-        listItem.appendChild(editInstrumentInput); // 楽器名編集フィールド
+        listItem.appendChild(memberInstrumentSpan); // 楽器名表示 (維持)
         listItem.appendChild(deleteButton);
         memberListUl.appendChild(listItem);
     });
 }
 
-function saveEdit(index, newName, newInstrument) { // 引数にnewInstrumentを追加
+function saveEdit(index, newName) { // 楽器名引数を削除
     if (!adminMode) {
         alert('管理者モードでのみ編集可能です。');
         return;
     }
-    if (newName.trim() && newInstrument.trim() && !members.some((m, i) => m.name === newName.trim() && i !== index )) {
-        members[index] = { name: newName.trim(), instrument: newInstrument.trim() }; // 楽器名も保存
+    if (newName.trim() && !members.some((m, i) => m.name === newName.trim() && i !== index )) {
+        members[index] = { name: newName.trim(), instrument: members[index].instrument }; // 楽器名は既存のものを維持
         saveMembers();
         loadMemberList();
         renderAttendanceTable();
         alert('メンバー情報を変更しました。'); // メッセージを更新
-    } else if (!newName.trim() || !newInstrument.trim()) {
-        alert('メンバー名と楽器名を入力してください。'); // アラートメッセージを修正
+    } else if (!newName.trim()) {
+        alert('メンバー名を入力してください。'); // アラートメッセージを修正
         loadMemberList();
     } else if (members.some((m, i) => m.name === newName.trim() && i !== index )) {
         alert('そのメンバー名は既に登録されています。');
@@ -331,22 +300,18 @@ function addMember() {
         return;
     }
     const newMemberNameInput = document.getElementById('newMemberName');
-    const newMemberInstrumentInput = document.getElementById('newMemberInstrument'); // 楽器名入力欄を取得
     const newMemberName = newMemberNameInput.value.trim();
-    const newMemberInstrument = newMemberInstrumentInput.value.trim(); // 楽器名を取得
 
-    if (newMemberName && newMemberInstrument && !members.some(m => m.name === newMemberName)) { // 楽器名が空でないこともチェック
-        members.push({ name: newMemberName, instrument: newMemberInstrument }); // メンバーオブジェクトに楽器名も追加
+    if (newMemberName && !members.some(m => m.name === newMemberName)) { // 楽器名関連のチェックを削除
+        const selectedInstrumentForNewMember = document.getElementById('instrumentSelect').value; // 楽器選択セレクトボックスから楽器名を取得
+        members.push({ name: newMemberName, instrument: selectedInstrumentForNewMember }); // メンバーオブジェクトに楽器名を追加 -  選択されている楽器を自動的に割り当てる
         newMemberNameInput.value = '';
-        newMemberInstrumentInput.value = ''; // 楽器名入力欄もクリア
         saveMembers();
         loadMemberList();
         renderAttendanceTable();
-        alert(newMemberName + ' さんを' + newMemberInstrument + 'パートとして追加しました。'); // メッセージを更新
+        alert(newMemberName + ' さんを' + selectedInstrumentForNewMember + 'パートとして追加しました。'); // メッセージを更新 - 楽器名部分を調整
     } else if (!newMemberName) {
         alert('メンバー名を入力してください。');
-    } else if (!newMemberInstrument) { // 楽器名が空の場合のアラート
-        alert('楽器名を入力してください。');
     }
      else if (members.some(m => m.name === newMemberName)) {
         alert('そのメンバーは既に登録されています。');
@@ -427,7 +392,7 @@ function renderAttendanceTable() {
 
 function updateAttendance() {
     const today = getFormattedDate();
-    const filteredMembers = members.filter(member => member.instrument === selectedInstrument); // フィルタリングされたメンバーリストを取得
+    const filteredMembers = members.filter(member => member.instrument === selectedInstrument); // 楽器でフィルタリングされたメンバーリストを取得
     const updatedAttendanceData = filteredMembers.map((member, index) => { // フィルタリングされたメンバーリストに基づいて出欠データを生成
         const radioNodes = document.querySelectorAll(`input[name="attendance_${index}"]`); // name属性はfilteredMembersのindexに基づいている
         let isPresent = false;
